--- a/package.json
+++ b/package.json
@@ -80,13 +80,13 @@
     "detect-node": "^2.0.3",
     "hapi": "^16.6.2",
     "hat": "0.0.3",
-    "ipfs-api": "^18.1.2",
-    "ipfs-repo": "^0.18.7",
+    "ipfs-api": "^20.0.1",
+    "ipfs-repo": "^0.19.0",
     "joi": "^13.1.2",
     "lodash.clonedeep": "^4.5.0",
     "lodash.defaults": "^4.2.0",
     "lodash.defaultsdeep": "^4.6.0",
-    "multiaddr": "^3.0.2",
+    "multiaddr": "^4.0.0",
     "once": "^1.4.0",
     "readable-stream": "^2.3.5",
     "rimraf": "^2.6.2",
@@ -106,7 +106,7 @@
     "dirty-chai": "^2.0.1",
     "go-ipfs-dep": "0.4.14",
     "ipfs": "~0.28.2",
-    "is-running": "1.0.5",
+    "is-running": "^2.1.0",
     "mkdirp": "^0.5.1",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.0.0",
