chore: update contributors

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "Haad <haadcode@users.noreply.github.com>",
     "Harlan T Wood <harlantwood@users.noreply.github.com>",
     "Hugo Dias <mail@hugodias.me>",
+    "Jacob Heun <jake@andyet.net>",
     "Jonathan <jkrone@vt.edu>",
     "Kristoffer Ström <kristoffer@rymdkoloni.se>",
     "Lars-Magnus Skog <ralphtheninja@riseup.net>",
